--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2457,15 +2457,44 @@ tags: [coding, algorithms]
      class Automaton(object):
 
          def __init__(self):
-             self.states = []
+             self.state = "q1"
+             # self.state = "q5"
 
          def read_commands(self, commands):
-             # Return True if we end in our accept state, False otherwise
+             for i in commands:
+                 if i == "1":
+                     if self.state == "q1":
+                         self.state = "q2"
+                         continue
+                     if self.state == "q3":
+                         self.state = "q2"
+                         continue
+                 if i == "0":
+                     if self.state == "q2":
+                         self.state = "q3"
+                         continue
+                     if self.state == "q3":
+                         self.state = "q2"
+                         continue
+
+             if self.state == "q2":
+                 return True
+             else:
+                 return False
 
      my_automaton = Automaton()
      # Do anything necessary to set up your automaton's states, q1, q2, and
      # q3.
-
+     assert(my_automaton.read_commands(["1", "0", "0", "1", "0"]) == False)
      assert(my_automaton.read_commands(["1"]))
      assert(my_automaton.read_commands(["1", "0", "0", "1"]))
+
+     # q1 is our start state. We begin reading commands from here.
+     # q2 is our accept state. We return true if this is our last state.
+
+     # q1 moves to q2 when given a 1, and stays at q1 when given a 0.
+     # q2 moves to q3 when given a 0, and stays at q2 when given a 1.
+     # q3 moves to q2 when given a 0 or 1.
    #+END_SRC
+
+   #+RESULTS:
