--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2557,7 +2557,8 @@ tags: [coding, algorithms]
 
 
      assert(plateau([2, 2, 2, 1]))
-     assert(plateau([2, 3, 4, 6, 5]) == False)
+     assert(plateau([2, 2, 4, 6, 7]) == False)
+     assert(plateau([2, 2, 4, 6, 5]) == False)
      assert(plateau([2, 2, 2, 2]) == False)
      print(pick_peaks([1,2,3,6,4,1,2,3,2,1]))
      ## ('should support finding peaks')
@@ -2580,5 +2581,5 @@ tags: [coding, algorithms]
      ## ('should support finding peaks, but should ignore peaks on the edge
      ## of the array')
      # print(pick_peaks([2,1,3,1,2,2,2,2]))
-     # assert(pick_peaks([2,1,3,1,2,2,2,2]) == {"pos":[2], "peaks":[3]})    
+     assert(pick_peaks([2,1,3,1,2,2,2,2]) == {"pos":[2], "peaks":[3]})    
    #+END_SRC
