--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2547,8 +2547,11 @@ tags: [coding, algorithms]
                     arr[i] > arr[i-1]:
                      peaks["pos"].append(i)
                      peaks["peaks"].append(arr[i])
+                     continue
+                 if arr[i] > arr[i-1] and plateau(arr[i:]):
+                     peaks["pos"].append(i)
+                     peaks["peaks"].append(arr[i])
          return peaks
-        
 
 
 
@@ -2566,14 +2569,15 @@ tags: [coding, algorithms]
 
      ## ('should support finding peaks; if the peak is a plateau, it should
      ## only return the position of the first element of the plateau')
-     #assert(pick_peaks([3,2,3,6,4,1,2,3,2,1,2,2,2,1]) == {"pos":[3,7,10],
-     #                                                     "peaks":[6,3,2]})
-
+     print(pick_peaks([3,2,3,6,4,1,2,3,2,1,2,2,2,1]))
+     assert(pick_peaks([3,2,3,6,4,1,2,3,2,1,2,2,2,1]) == {"pos":[3,7,10],
+                                                          "peaks":[6,3,2]})
      ## ('should support finding peaks; if the peak is a plateau, it should
      ## only return the position of the first element of the plateau')
-     #assert(pick_peaks([2,1,3,1,2,2,2,2,1]) == {"pos":[2,4], "peaks":[3,2]})
+     assert(pick_peaks([2,1,3,1,2,2,2,2,1]) == {"pos":[2,4], "peaks":[3,2]})
 
      ## ('should support finding peaks, but should ignore peaks on the edge
      ## of the array')
-     #assert(pick_peaks([2,1,3,1,2,2,2,2]) == {"pos":[2], "peaks":[3]})    
+     # print(pick_peaks([2,1,3,1,2,2,2,2]))
+     # assert(pick_peaks([2,1,3,1,2,2,2,2]) == {"pos":[2], "peaks":[3]})    
    #+END_SRC
