--- a/2016-11-09-time-complexity.org
+++ b/2016-11-09-time-complexity.org
@@ -1,4 +1,4 @@
-#+BEGIN_HTML
+#+BEGIN_EXPORT html
 ---
 layout: post
 title: The time complexity
@@ -7,7 +7,8 @@ permalink: /algorithms/time-complexity.html
 categories: [algorithms, literate programming]
 tags: [computation, complexity, analysis]
 ---
-#+END_HTML
+#+END_EXPORT
+
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
