--- a/2017-04-19-perceptron-in-python-oop.org
+++ b/2017-04-19-perceptron-in-python-oop.org
@@ -12,7 +12,7 @@ tags: [perceptron, oop]
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
-#+PROPERTY:header-args :results output :exports both
+#+PROPERTY:header-args :results output :exports both :eval noexport
 
 #+INCLUDE: motto.org::perceptron
 
