--- a/2017-04-19-perceptron-in-python-oop.org
+++ b/2017-04-19-perceptron-in-python-oop.org
@@ -14,8 +14,16 @@ tags: [perceptron, oop]
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval noexport
 
+* Definition
 
+** What is a perceptron?
+   #+BEGIN_QUOTE
+   a computer model or computerized machine devised to represent or
+   simulate the ability of the brain to recognize and discriminate.
+   #+END_QUOTE
 
+   In an initial form the perceptron is a single-layer neural
+   network, which has no any hidden units among input and output.
 
 ** What is neuron?
    #+CAPTION: Neuron anatomy
