Perceptron source code include

--- a/2017-04-19-perceptron-in-python-oop.org
+++ b/2017-04-19-perceptron-in-python-oop.org
@@ -37,3 +37,5 @@ tags: [perceptron, oop]
    neurons. From there the message can move to the next neuron.
 
 
+* Implementation
+  #+INCLUDE: motto.org::perceptron
