--- a/2017-04-19-perceptron-in-python-oop.org
+++ b/2017-04-19-perceptron-in-python-oop.org
@@ -1,9 +1,9 @@
 #+BEGIN_EXPORT html
 ---
 layout: post
-title: Perceptron
+title: Neural Network
 tagline: " written in Python OOP"
-permalink: /machine-learning/neural-network/perceptron/oop-concept.html
+permalink: /machine-learning/neural-network/oop-concept.html
 categories: [machine learning, neural networks]
 tags: [perceptron, oop]
 ---
@@ -16,14 +16,10 @@ tags: [perceptron, oop]
 
 * Definition
 
-** What is a perceptron?
+** What is a neural network?
    #+BEGIN_QUOTE
-   a computer model or computerized machine devised to represent or
-   simulate the ability of the brain to recognize and discriminate.
+   a computer system modelled on the human /brain/ and nervous system
    #+END_QUOTE
-
-   In an initial form the perceptron is a single-layer neural
-   network, which has no any hidden units among input and output.
 
 ** What is neuron?
    #+CAPTION: Neuron anatomy
@@ -39,3 +35,8 @@ tags: [perceptron, oop]
 
 * Implementation
   #+INCLUDE: motto.org::perceptron
+
+* Scratches                                                        :noexport:
+  In an initial form the perceptron is a single-layer neural
+  network, which has no any hidden units among input and output.
+
