--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2583,3 +2583,21 @@ tags: [coding, algorithms]
      # print(pick_peaks([2,1,3,1,2,2,2,2]))
      assert(pick_peaks([2,1,3,1,2,2,2,2]) == {"pos":[2], "peaks":[3]})    
    #+END_SRC
+
+* #34 Permutations
+  
+** Description
+   #+BEGIN_QUOTE
+   In this kata you have to create all permutations of an input string
+   and remove duplicates, if present. This means, you have to shuffle
+   all letters from the input in all possible orders.
+
+   Examples:
+
+   permutations('a'); # ['a']
+   permutations('ab'); # ['ab', 'ba']
+   permutations('aabb'); # ['aabb', 'abab', 'abba', 'baab', 'baba', 'bbaa']
+
+   The order of the permutations doesn't matter.
+   #+END_QUOTE
+
