--- a/2017-05-01-recurrent-ann.org
+++ b/2017-05-01-recurrent-ann.org
@@ -18,22 +18,26 @@ tags: [architecture, overview, recurrent network]
 #+BEGIN_QUOTE
 Modeling sequences: A brief overview
 #+END_QUOTE
+
 * Getting targets when modeling sequences
   When applying machine learning to sequences, we often want to turn
   an input sequence into an output sequence that lives in a different
   domain.
 
-  –  E. g. turn a sequence of sound pressures into a sequence of word identities.
-  When there is no separate target sequence, we can get a teaching signal by trying
-  to predict the next term in the input sequence.
-  –  The target output sequence is the input sequence with an advance of 1 step.
-  –  This seems much more natural than trying to predict one pixel in an image
-  from the other pixels, or one patch of an image from the rest of the image.
-  –  For temporal sequences there is a natural order for the predictions.
-  Predicting the next term in a sequence blurs the distinction between supervised
-  and unsupervised learning.
-  –  It uses methods designed for supervised learning, but it doesn’t require a
-  separate teaching signal.Memoryless models for sequences
+  - E. g. turn a sequence of sound pressures into a sequence of word
+    identities. When there is no separate target sequence, we can get
+    a teaching signal by trying to predict the next term in the input
+    sequence.
+  - The target output sequence is the input sequence with an advance
+    of 1 step.
+  - This seems much more natural than trying to predict one pixel in
+    an image from the other pixels, or one patch of an image from the
+    rest of the image.
+  - For temporal sequences there is a natural order for the
+    predictions. Predicting the next term in a sequence blurs the
+    distinction between supervised and unsupervised learning.
+  - It uses methods designed for supervised learning, but it doesn’t
+    require a separate teaching signal.Memoryless models for sequences
 
   •  Autoregressive models
   w t −1
@@ -60,81 +64,92 @@ Modeling sequences: A brief overview
   this hidden state its own internal dynamics, we get a much more
   interesting kind of model.
 
-  –  It can store information in its hidden state for a long time.
-  –  If the dynamics is noisy and the way it generates outputs from its
-  hidden state is noisy, we can never know its exact hidden state.
-  –  The best we can do is to infer a probability distribution over the
-  space of hidden state vectors.
+  - It can store information in its hidden state for a long time.
+  - If the dynamics is noisy and the way it generates outputs from its
+    hidden state is noisy, we can never know its exact hidden state.
+  - The best we can do is to infer a probability distribution over the
+    space of hidden state vectors.
   •  This inference is only tractable for two types of hidden state model.
-  –  The next three slides are mainly intended for people who already
-  know about these two types of hidden state model. They show how
-  RNNs differ.
-  –  Do not worry if you cannot follow the details.Linear Dynamical Systems (engineers love them!)
-  time à
-  •  These are generative models. They have a real-
-  valued hidden state that cannot be observed
-  directly.
-  –  The hidden state has linear dynamics with
-  Gaussian noise and produces the
-  observations using a linear model with
-  Gaussian noise.
-  –  There may also be driving inputs.
-  •  To predict the next output (so that we can shoot
-  down the missile) we need to infer the hidden
-  state.
-  –  A linearly transformed Gaussian is a
-  Gaussian. So the distribution over the hiddenHidden Markov Models (computer scientists love them!)
-  time à
-  •  Hidden Markov Models have a discrete one-
-  of-N hidden state. Transitions between states
-  are stochastic and controlled by a transition
-  matrix. The outputs produced by a state are
-  stochastic.
-  –  We cannot be sure which state produced
-  a given output. So the state is “hidden”.
-  –  It is easy to represent a probability
-  distribution across N states with N
-  numbers.
-  •  To predict the next output we need to infer the
-  probability distribution over hidden states.
-  –  HMMs have efficient algorithms forA fundamental limitation of HMMs
-  •  Consider what happens when a hidden Markov model generates
-  data.
-  –  At each time step it must select one of its hidden states. So with
-  N hidden states it can only remember log(N) bits about what it
-  generated so far.
-  •  Consider the information that the first half of an utterance contains
-  about the second half:
-  –  The syntax needs to fit (e.g. number and tense agreement).
-  –  The semantics needs to fit. The intonation needs to fit.
-  –  The accent, rate, volume, and vocal tract characteristics must all
-  fit.
-  •  All these aspects combined could be 100 bits of information that the
-  first half of an utterance needs to convey to the second half. 2^100Recurrent neural networks
-  time à
-  •  RNNs are very powerful, because they
-  combine two properties:
-  –  Distributed hidden state that allows
-  them to store a lot of information
-  about the past efficiently.
-  –  Non-linear dynamics that allows
-  them to update their hidden state in
-  complicated ways.
-  •  With enough neurons and time, RNNs
-  can compute anything that can be
-  computed by your computer.Do generative models need to be stochastic?
+
+  - The next three slides are mainly intended for people who already
+    know about these two types of hidden state model. They show how
+    RNNs differ.
+  - Do not worry if you cannot follow the details.Linear Dynamical
+    Systems (engineers love them!) time à
+
+  • These are generative models. They have a real-valued hidden state
+    that cannot be observed directly.
+
+  - The hidden state has linear dynamics with Gaussian noise and
+    produces the observations using a linear model with Gaussian
+    noise.
+  - There may also be driving inputs.
+
+  • To predict the next output (so that we can shoot down the missile)
+     we need to infer the hidden state.
+
+  - A linearly transformed Gaussian is a Gaussian. So the distribution
+    over the hiddenHidden Markov Models (computer scientists love
+    them!) time à
+
+  • Hidden Markov Models have a discrete one- of-N hidden state.
+  Transitions between states are stochastic and controlled by a
+  transition matrix. The outputs produced by a state are stochastic.
+
+  - We cannot be sure which state produced a given output. So the
+    state is “hidden”.
+
+  - It is easy to represent a probability distribution across N states
+    with N numbers.
+
+  • To predict the next output we need to infer the probability
+  distribution over hidden states.
+
+  - HMMs have efficient algorithms forA fundamental limitation of HMMs
+
+  •  Consider what happens when a hidden Markov model generates data.
+
+  - At each time step it must select one of its hidden states. So with
+    N hidden states it can only remember log(N) bits about what it
+    generated so far.
+
+  • Consider the information that the first half of an utterance
+  contains about the second half:
+
+  - The syntax needs to fit (e.g. number and tense agreement).
+  - The semantics needs to fit. The intonation needs to fit.
+  - The accent, rate, volume, and vocal tract characteristics must all
+    fit.
+
+  • All these aspects combined could be 100 bits of information that
+  the first half of an utterance needs to convey to the second half.
+  2^{100}Recurrent neural networks time à
+
+  • RNNs are very powerful, because they combine two properties:
+  - Distributed hidden state that allows them to store a lot of
+    information about the past efficiently.
+  - Non-linear dynamics that allows them to update their hidden state
+    in complicated ways.
+
+  • With enough neurons and time, RNNs can compute anything that can
+  be computed by your computer.Do generative models need to be
+  stochastic?
+
   •  Linear dynamical systems and
   hidden Markov models are
   stochastic models.
-  –  But the posterior probability
+
+  - But the posterior probability
   distribution over their
   hidden states given the
   observed data so far is a
   deterministic function of the
   data.
+
   •  Recurrent neural networks are
   deterministic.
-  –  So think of the hidden state
+
+  - So think of the hidden state
   of an RNN as the
   equivalent of the
   deterministic probability
@@ -142,17 +157,22 @@ Modeling sequences: A brief overview
   states in a linear dynamical
   system or hidden Markov
   model.Recurrent neural networks
+
   •  What kinds of behaviour can RNNs exhibit?
-  –  They can oscillate. Good for motor control?
-  –  They can settle to point attractors. Good for retrieving memories?
-  –  They can behave chaotically. Bad for information processing?
-  –  RNNs could potentially learn to implement lots of small programs
+
+  - They can oscillate. Good for motor control?
+  - They can settle to point attractors. Good for retrieving memories?
+  - They can behave chaotically. Bad for information processing?
+  - RNNs could potentially learn to implement lots of small programs
   that each capture a nugget of knowledge and run in parallel,
   interacting to produce very complicated effects.
+
   •  But the computational power of RNNs makes them very hard to train.
-  –  For many years we could not exploit the computational power of
+
+  - For many years we could not exploit the computational power of
   RNNs despite some heroic efforts (e.g. Tony Robinson’s speech
   recognizer).Neural Networks for Machine Learning
+
 * Training RNNs with backpropagation
   Geoffrey Hinton
   Nitish Srivastava,
@@ -189,7 +209,7 @@ Modeling sequences: A brief overview
   usual, and then modify the
   gradients so that they satisfy the
   constraints.
-  –  So if the weights started off
+  - So if the weights started off
   satisfying the constraints,
   they will continue to satisfy
   them.
@@ -210,32 +230,32 @@ Modeling sequences: A brief overview
   net with shared weights and then train the feed-forward net
   with weight constraints.
   •  We can also think of this training algorithm in the time domain:
-  –  The forward pass builds up a stack of the activities of all
+  - The forward pass builds up a stack of the activities of all
   the units at each time step.
-  –  The backward pass peels activities off the stack to
+  - The backward pass peels activities off the stack to
   compute the error derivatives at each time step.
-  –  After the backward pass we add together the derivatives at
+  - After the backward pass we add together the derivatives at
   all the different times for each weight.An irritating extra issue
   •  We need to specify the initial activity state of all the hidden and output
   units.
   •  We could just fix these initial states to have some default value like 0.5.
   •  But it is better to treat the initial states as learned parameters.
   •  We learn them in the same way as we learn the weights.
-  –  Start off with an initial random guess for the initial states.
-  –  At the end of each training sequence, backpropagate through time
+  - Start off with an initial random guess for the initial states.
+  - At the end of each training sequence, backpropagate through time
   all the way to the initial states to get the gradient of the error function
   with respect to each initial state.
-  –  Adjust the initial states by following the negative gradient.Providing input to recurrent networks
+  - Adjust the initial states by following the negative gradient.Providing input to recurrent networks
   w 1
   w 2
   w 3 w 4
   •  We can specify inputs in several
   ways:
-  –  Specify the initial states of all
+  - Specify the initial states of all
   the units.
-  –  Specify the initial states of a
+  - Specify the initial states of a
   subset of the units.
-  –  Specify the states of the same
+  - Specify the states of the same
   subset of the units at every time
   step.
   •  This is the natural way to
@@ -247,15 +267,15 @@ Modeling sequences: A brief overview
   timeTeaching signals for recurrent networks
   •  We can specify targets in several
   ways:
-  –  Specify desired final activities of
+  - Specify desired final activities of
   all the units
-  –  Specify desired activities of all
+  - Specify desired activities of all
   units for the last few steps
   •  Good for learning attractors
   •  It is easy to add in extra error
   derivatives as we
   backpropagate.
-  –  Specify the desired activity of a
+  - Specify the desired activity of a
   subset of the units.
   •  The other units are input or
   hidden units.
@@ -276,10 +296,10 @@ Modeling sequences: A brief overview
   binary addition, but there are obvious
   regularities that it cannot capture
   efficiently.
-  –  We must decide in advance the
+  - We must decide in advance the
   maximum number of digits in each
   number.
-  –  The processing applied to the
+  - The processing applied to the
   beginning of a long number does not
   generalize to the end of the long
   number because
@@ -339,10 +359,10 @@ Modeling sequences: A brief overview
   step is the output for the column
   that was provided as input two time
   steps ago.
-  –  It takes one time step to update
+  - It takes one time step to update
   the hidden units based on the
   two input digits.
-  –  It takes another time step for the
+  - It takes another time step for the
   hidden units to cause the
   output.
   0 0 1 1 0 1 0 0
@@ -352,7 +372,7 @@ Modeling sequences: A brief overview
   •  The 3 hidden units are fully
   interconnected in both
   directions.
-  –  This allows a hidden
+  - This allows a hidden
   activity pattern at one
   time step to vote for the
   hidden activity pattern at
@@ -372,21 +392,21 @@ Modeling sequences: A brief overview
   possible binary activity vectors
   automaton.
   (but only N^2 weights)
-  –  Do not confuse units in a
-  –  This is important when the
+  - Do not confuse units in a
+  - This is important when the
   neural network with nodes in a
   input stream has two separate
   finite state automaton. Nodes
   things going on at once.
   are like activity vectors.
-  –  A finite state automaton
-  –  The automaton is restricted to
+  - A finite state automaton
+  - The automaton is restricted to
   needs to square its number of
   be in exactly one state at each
   states.
   time. The hidden units are
   restricted to have exactly one
-  –  An RNN needs to double its
+  - An RNN needs to double its
   vector of activity at each time.
   number of units.Neural Networks for Machine Learning
   Lecture 7d
@@ -404,7 +424,7 @@ Modeling sequences: A brief overview
   •  The backward pass, is completely linear. If
   you double the error derivatives at the final
   layer, all the error derivatives will double.
-  –  The forward pass determines the slope
+  - The forward pass determines the slope
   of the linear function used for
   backpropagating through each neuron.The problem of exploding or vanishing gradients
   • 
@@ -412,9 +432,9 @@ Modeling sequences: A brief overview
   What happens to the magnitude of the
   gradients as we backpropagate
   through many layers?
-  –  If the weights are small, the
+  - If the weights are small, the
   gradients shrink exponentially.
-  –  If the weights are big the gradients
+  - If the weights are big the gradients
   grow exponentially.
   Typical feed-forward neural nets can
   cope with these exponential effects
@@ -425,13 +445,13 @@ Modeling sequences: A brief overview
   In an RNN trained on long sequences
   (e.g. 100 time steps) the gradients
   can easily explode or vanish.
-  –  We can avoid this by initializing
+  - We can avoid this by initializing
   the weights very carefully.
   Even with good initial weights, its very
   hard to detect that the current target
   output depends on an input from
   many time-steps ago.
-  –  So RNNs have difficulty dealing
+  - So RNNs have difficulty dealing
   with long-range dependencies.Why the back-propagated gradient blows up
   •  If we start a trajectory within an attractor, small changes in where we
   start make no difference to where we end up.
@@ -449,7 +469,7 @@ Modeling sequences: A brief overview
   optimizer that can detect
   directions with a tiny gradient but
   even smaller curvature.
-  –  The HF optimizer ( Martens &
+  - The HF optimizer ( Martens &
   Sutskever, 2011) is good at
   this.
   • 
@@ -461,7 +481,7 @@ Modeling sequences: A brief overview
   huge reservoir of weakly coupled
   oscillators which can be selectively driven
   by the input.
-  –  ESNs only need to learn the
+  - ESNs only need to learn the
   hiddenàoutput connections.
   Good initialization with momentum
   Initialize like in Echo State Networks, but
@@ -492,13 +512,13 @@ Modeling sequences: A brief overview
   gate.  To preserve information for a long time in
   the activities of an RNN, we use a circuit
   that implements an analog memory cell.
-  –  A linear unit that has a self-link with a
+  - A linear unit that has a self-link with a
   weight of 1 will maintain its state.
-  –  Information is stored in the cell by
+  - Information is stored in the cell by
   activating its write gate.
-  –  Information is retrieved by activating
+  - Information is retrieved by activating
   the read gate.
-  –  We can backpropagate through this
+  - We can backpropagate through this
   circuit because logistics are have nice
   derivatives.
   keep
@@ -550,18 +570,18 @@ Modeling sequences: A brief overview
   showed that RNNs with LSTM
   are currently the best systems
   for reading cursive writing.
-  –  They used a sequence of
+  - They used a sequence of
   small images as input
   rather than pen
   coordinates.A demonstration of online handwriting recognition by an
   RNN with Long Short Term Memory (from Alex Graves)
   •  The movie that follows shows several different things:
   •  Row 1: This shows when the characters are recognized.
-  –  It never revises its output so difficult decisions are more delayed.
+  - It never revises its output so difficult decisions are more delayed.
   •  Row 2: This shows the states of a subset of the memory cells.
-  –  Notice how they get reset when it recognizes a character.
+  - Notice how they get reset when it recognizes a character.
   •  Row 3: This shows the writing. The net sees the x and y coordinates.
-  –  Optical input actually works a bit better than pen coordinates.
+  - Optical input actually works a bit better than pen coordinates.
   •  Row 4: This shows the gradient backpropagated all the way to the x and
   y inputs from the currently most active character.
-  –  This lets you see which bits of the data are influencing the decision.
+  - This lets you see which bits of the data are influencing the decision.
