--- a/2017-05-01-recurrent-ann.org
+++ b/2017-05-01-recurrent-ann.org
@@ -14,164 +14,170 @@ tags: [architecture, overview, recurrent network]
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both
 
+* Modeling sequences: A brief overview
+** Getting targets when modeling sequences
+   When applying machine learning to sequences, we often want to turn
+   an input sequence into an output sequence that lives in a different
+   domain.
 
-#+BEGIN_QUOTE
-Modeling sequences: A brief overview
-#+END_QUOTE
+   - E. g. turn a sequence of sound pressures into a sequence of word
+     identities. When there is no separate target sequence, we can get
+     a teaching signal by trying to predict the next term in the input
+     sequence.
+   - The target output sequence is the input sequence with an advance
+     of 1 step.
+   - This seems much more natural than trying to predict one pixel in
+     an image from the other pixels, or one patch of an image from the
+     rest of the image.
+   - For temporal sequences there is a natural order for the
+     predictions. Predicting the next term in a sequence blurs the
+     distinction between supervised and unsupervised learning.
+   - It uses methods designed for supervised learning, but it doesn’t
+     require a separate teaching signal.
 
-* Getting targets when modeling sequences
-  When applying machine learning to sequences, we often want to turn
-  an input sequence into an output sequence that lives in a different
-  domain.
+** Memoryless models for sequences
 
-  - E. g. turn a sequence of sound pressures into a sequence of word
-    identities. When there is no separate target sequence, we can get
-    a teaching signal by trying to predict the next term in the input
-    sequence.
-  - The target output sequence is the input sequence with an advance
-    of 1 step.
-  - This seems much more natural than trying to predict one pixel in
-    an image from the other pixels, or one patch of an image from the
-    rest of the image.
-  - For temporal sequences there is a natural order for the
-    predictions. Predicting the next term in a sequence blurs the
-    distinction between supervised and unsupervised learning.
-  - It uses methods designed for supervised learning, but it doesn’t
-    require a separate teaching signal.Memoryless models for sequences
+   •  Autoregressive models
+   w t −1
+   w t −2
+   Predict the next term in a
+   sequence from a fixed number of
+   input(t-2)
+   input(t-1)
+   previous terms using “delay taps”.
 
-  •  Autoregressive models
-  w t −1
-  w t −2
-  Predict the next term in a
-  sequence from a fixed number of
-  input(t-2)
-  input(t-1)
-  previous terms using “delay taps”.
+   •  Feed-forward neural nets
+   These generalize autoregressive
+   models by using one or more
+   layers of non-linear hidden units.
+   e.g. Bengio’s first language
+   model.
+   input(t)
+   hidden
+   input(t-2)
+   input(t-1)
+   input(t)
 
-  •  Feed-forward neural nets
-  These generalize autoregressive
-  models by using one or more
-  layers of non-linear hidden units.
-  e.g. Bengio’s first language
-  model.
-  input(t)
-  hidden
-  input(t-2)
-  input(t-1)
-  input(t)Beyond memoryless models
+** Beyond memoryless models
 
-  • If we give our generative model some hidden state, and if we give
-  this hidden state its own internal dynamics, we get a much more
-  interesting kind of model.
+   • If we give our generative model some hidden state, and if we give
+   this hidden state its own internal dynamics, we get a much more
+   interesting kind of model.
 
-  - It can store information in its hidden state for a long time.
-  - If the dynamics is noisy and the way it generates outputs from its
-    hidden state is noisy, we can never know its exact hidden state.
-  - The best we can do is to infer a probability distribution over the
-    space of hidden state vectors.
-  •  This inference is only tractable for two types of hidden state model.
+   - It can store information in its hidden state for a long time.
+   - If the dynamics is noisy and the way it generates outputs from its
+     hidden state is noisy, we can never know its exact hidden state.
+   - The best we can do is to infer a probability distribution over the
+     space of hidden state vectors.
+   •  This inference is only tractable for two types of hidden state model.
 
-  - The next three slides are mainly intended for people who already
-    know about these two types of hidden state model. They show how
-    RNNs differ.
-  - Do not worry if you cannot follow the details.Linear Dynamical
-    Systems (engineers love them!) time à
+   - The next three slides are mainly intended for people who already
+     know about these two types of hidden state model. They show how
+     RNNs differ.
+   - Do not worry if you cannot follow the details.
 
-  • These are generative models. They have a real-valued hidden state
-    that cannot be observed directly.
+** Linear Dynamical Systems(engineers love them!)
+   time \to
 
-  - The hidden state has linear dynamics with Gaussian noise and
-    produces the observations using a linear model with Gaussian
-    noise.
-  - There may also be driving inputs.
+   • These are generative models. They have a real-valued hidden state
+     that cannot be observed directly.
 
-  • To predict the next output (so that we can shoot down the missile)
-     we need to infer the hidden state.
+   - The hidden state has linear dynamics with Gaussian noise and
+     produces the observations using a linear model with Gaussian
+     noise.
+   - There may also be driving inputs.
 
-  - A linearly transformed Gaussian is a Gaussian. So the distribution
-    over the hiddenHidden Markov Models (computer scientists love
-    them!) time à
+   • To predict the next output (so that we can shoot down the missile)
+      we need to infer the hidden state.
 
-  • Hidden Markov Models have a discrete one- of-N hidden state.
-  Transitions between states are stochastic and controlled by a
-  transition matrix. The outputs produced by a state are stochastic.
+   - A linearly transformed Gaussian is a Gaussian. So the distribution
+     over the hidden
 
-  - We cannot be sure which state produced a given output. So the
-    state is “hidden”.
 
-  - It is easy to represent a probability distribution across N states
-    with N numbers.
+** Hidden Markov Models (computer scientists love them!)
+   time \to
 
-  • To predict the next output we need to infer the probability
-  distribution over hidden states.
+   • Hidden Markov Models have a discrete one-of-N hidden state.
+   Transitions between states are stochastic and controlled by a
+   transition matrix. The outputs produced by a state are stochastic.
 
-  - HMMs have efficient algorithms forA fundamental limitation of HMMs
+   - We cannot be sure which state produced a given output. So the
+     state is “hidden”.
 
-  •  Consider what happens when a hidden Markov model generates data.
+   - It is easy to represent a probability distribution across N states
+     with N numbers.
 
-  - At each time step it must select one of its hidden states. So with
-    N hidden states it can only remember log(N) bits about what it
-    generated so far.
+   • To predict the next output we need to infer the probability
+   distribution over hidden states.
 
-  • Consider the information that the first half of an utterance
-  contains about the second half:
+   - HMMs have efficient algorithms for
 
-  - The syntax needs to fit (e.g. number and tense agreement).
-  - The semantics needs to fit. The intonation needs to fit.
-  - The accent, rate, volume, and vocal tract characteristics must all
-    fit.
 
-  • All these aspects combined could be 100 bits of information that
-  the first half of an utterance needs to convey to the second half.
-  2^{100}Recurrent neural networks time à
+** A fundamental limitation of HMMs
 
-  • RNNs are very powerful, because they combine two properties:
-  - Distributed hidden state that allows them to store a lot of
-    information about the past efficiently.
-  - Non-linear dynamics that allows them to update their hidden state
-    in complicated ways.
+   •  Consider what happens when a hidden Markov model generates data.
 
-  • With enough neurons and time, RNNs can compute anything that can
-  be computed by your computer.Do generative models need to be
-  stochastic?
+   - At each time step it must select one of its hidden states. So with
+     N hidden states it can only remember log(N) bits about what it
+     generated so far.
 
-  •  Linear dynamical systems and
-  hidden Markov models are
-  stochastic models.
+   • Consider the information that the first half of an utterance
+   contains about the second half:
 
-  - But the posterior probability
-  distribution over their
-  hidden states given the
-  observed data so far is a
-  deterministic function of the
-  data.
+   - The syntax needs to fit (e.g. number and tense agreement).
+   - The semantics needs to fit. The intonation needs to fit.
+   - The accent, rate, volume, and vocal tract characteristics must all
+     fit.
 
-  •  Recurrent neural networks are
-  deterministic.
+   • All these aspects combined could be 100 bits of information that
+   the first half of an utterance needs to convey to the second half.
+   2^{100}
 
-  - So think of the hidden state
-  of an RNN as the
-  equivalent of the
-  deterministic probability
-  distribution over hidden
-  states in a linear dynamical
-  system or hidden Markov
-  model.Recurrent neural networks
+** Recurrent neural networks
+   time \to
 
-  •  What kinds of behaviour can RNNs exhibit?
+   • RNNs are very powerful, because they combine two properties:
+   - Distributed hidden state that allows them to store a lot of
+     information about the past efficiently.
+   - Non-linear dynamics that allows them to update their hidden state
+     in complicated ways.
 
-  - They can oscillate. Good for motor control?
-  - They can settle to point attractors. Good for retrieving memories?
-  - They can behave chaotically. Bad for information processing?
-  - RNNs could potentially learn to implement lots of small programs
-  that each capture a nugget of knowledge and run in parallel,
-  interacting to produce very complicated effects.
+   • With enough neurons and time, RNNs can compute anything that can
+   be computed by your computer.
 
-  •  But the computational power of RNNs makes them very hard to train.
+** Do generative models need to be stochastic?
 
-  - For many years we could not exploit the computational power of
-  RNNs despite some heroic efforts (e.g. Tony Robinson’s speech
-  recognizer).Neural Networks for Machine Learning
+   • Linear dynamical systems and hidden Markov models are stochastic
+   models.
+
+   - But the posterior probability distribution over their hidden
+     states given the observed data so far is a deterministic function
+     of the data.
+
+   •  Recurrent neural networks are deterministic.
+
+   - So think of the hidden state of an RNN as the equivalent of the
+     deterministic probability distribution over hidden states in a
+     linear dynamical system or hidden Markov model.
+
+** Recurrent neural networks
+
+   •  What kinds of behaviour can RNNs exhibit?
+
+   - They can oscillate. Good for motor control?
+   - They can settle to point attractors. Good for retrieving memories?
+   - They can behave chaotically. Bad for information processing?
+   - RNNs could potentially learn to implement lots of small programs
+     that each capture a nugget of knowledge and run in parallel,
+     interacting to produce very complicated effects.
+
+   •  But the computational power of RNNs makes them very hard to train.
+
+   - For many years we could not exploit the computational power of
+     RNNs despite some heroic efforts (e.g. Tony Robinson’s speech
+     recognizer).
+
+
 
 * Training RNNs with backpropagation
   Geoffrey Hinton
