--- a/2017-03-21-why-machine-learning.org
+++ b/2017-03-21-why-machine-learning.org
@@ -347,10 +347,11 @@ Why do we need machine learning?
    thousands of alternatives. And then once you place those bets you
    have a decoding stage that does the best job it can of using
    plausible bets, but piecing them together into a sequence of bets
-   that corresponds to the kinds of things that people say. Currently,
-   deep neural networks pioneered by George Dahl and Abdel-rahman
-   Mohammed of the University of Toronto are doing better than
-   previous machine learning methods for the acoustic model, and
+   that corresponds to the kinds of things that people say.
+
+   Currently, deep neural networks pioneered by George Dahl and
+   Abdel-Rahman Mohammed of the University of Toronto are doing better
+   than previous machine learning methods for the acoustic model, and
    they're now beginning to be used in practical systems. So, Dahl and
    Mohammed, developed a system, that uses many layers of, binary
    neurons, to, take some acoustic frames, and make bets about the
@@ -363,14 +364,15 @@ Why do we need machine learning?
    benchmark for speak independent recognition was 24.4%. And a very
    experienced speech researcher at Microsoft research realized that,
    that was a big enough improvement, that probably this would change
-   the way speech recognition systems were done. And indeed, it has.
-   So, if you look at recent results from several different leading
-   speech groups, Microsoft showed that this kind of deep neural
-   network, when used as the acoustic model in the speech system.
-   Reduced the error rate from 27.4 percent to 18.5%, or
+   the way speech recognition systems were done.
+
+   And indeed, it has. So, if you look at recent results from several
+   different leading speech groups, Microsoft showed that this kind of
+   deep neural network, when used as the acoustic model in the speech
+   system. Reduced the error rate from 27.4 percent to 18.5%, or
    alternatively, you could view it as reducing the amount of training
    data you needed from 2,000 hours down to 309 hours to get
-   comparable performance. Ibm which has the best system for one of
+   comparable performance. IBM which has the best system for one of
    the standard speech recognition tasks for large recovery speech
    recognition, showed that even it's very highly tuned system that
    was getting 18.8 percent can be beaten by one of these deep neural
@@ -379,9 +381,11 @@ Why do we need machine learning?
    much less than they trained their mixture model on. But even with
    much less data, it did a lot better than the technology they had
    before. So it reduced the error rate from sixteen percent to 12.3
-   percent and the error rate is still falling. And in the latest
-   Android, if you do voice search, it's using one of these deep
-   neurall networks in order to do very good speech recognition.
+   percent and the error rate is still falling.
+
+   And in the latest Android, if you do voice search, it's using one
+   of these deep neurall networks in order to do very good speech
+   recognition.
 
 * What are neural networks?
 
