Palindrome generator description

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2624,3 +2624,12 @@ tags: [coding, algorithms]
    #+END_SRC
 
    #+RESULTS:
+
+* #35 Palindrome generator
+  
+** Description
+   Your task is to generate a palindrome string, using the specified
+   length n, the specified characters c(all characters in c must be
+   used at least once), and the code length should less than: python
+   55 characters javascript 62 characters
+
